<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hidn</string>
    <string name="developer">Rueben Anderson</string>
    <string name="developerContact">rueben.anderson@gmail.com</string>
    <string name="blank"></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="pin">Security Pin</string>
    <string name="refresh">Refresh</string>
    <string name="done">Done</string>
    <string name="textHint">Write your text here</string>
    <string name="bookmarkAlert">Give a name to this bookmark.</string>
    <string name="urlHint">http://www.domain.com</string>
    <string name="genericHint">Type text here</string>
    <string name="renameFile">Enter a name for this file including an extension</string>
    <string name="bookmarkHint">Type bookmark name</string>
    <string name="bugDirections">Report a bug in the field below. Remember to be detailed as possible and describe when (etc: adding file) and where (the screen) the bug occurred.</string>
    <string name="contactDirections">Only a First name and Primary phone are required.</string>
    <string name="noteDirections">Compose a note here. A Title is required to save.</string>
    <string name="bugHint">Report bug here.</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="directions">Welcome to Hidn, to get started please fill out the form to create a new account.</string>
	<string name="settings">Settings</string>
	<string name="photo">Photos</string>
	<string name="contact">Contacts</string>
	<string name="bookmark">Bookmarks</string>
	<string name="firstName">First Name</string>
	<string name="lastName">Last Name</string>
	<string name="address">Address</string>
	<string name="primaryPhone">Primary Phone</string>
	<string name="secondaryPhone">Secondary Phone</string>
	<string name="note">Notes</string>
	<string name="docs">Documents</string>
	<string name="vids">Videos</string>
	<string name="comment">Comments</string>
	<string name="emailHint">Type your email</string>
	<string name="passwordHint">Type a secure password</string>
	<string name="firstNameHint">Type your first name</string>
	<string name="lastNameHint">Type your last name</string>
	<string name="pinHint">Type a 6 digit code</string>
	<string name="clear">Clear</string>
	<string name="backspace">BS</string>
	<string name="contactUsHint">Write questions / suggestions here.</string>
	<string name="nothingToReport">Nothing to report.</string>
	<string name="num0">0</string>
	<string name="num1">1</string>
	<string name="num2">2</string>
	<string name="num3">3</string>
	<string name="num4">4</string>
	<string name="num5">5</string>
	<string name="num6">6</string>
	<string name="num7">7</string>
	<string name="num8">8</string>
	<string name="num9">9</string>
	<string name="theme1_1">Theme 1.1</string>
	<string name="theme1_2">Theme 1.2</string>
	<string name="theme1_3">Theme 1.3</string>
	<string name="theme1_4">Theme 1.4</string>
	<string name="theme2_1">Theme 2.1</string>
	<string name="theme2_2">Theme 2.2</string>
	<string name="theme2_3">Theme 2.3</string>
	<string name="theme2_4">Theme 2.4</string>
	<string name="theme3_1">Theme 3.1</string>
	<string name="theme3_2">Theme 3.2</string>
	<string name="theme3_3">Theme 3.3</string>
	<string name="theme3_4">Theme 3.4</string>
	<string name="theme4_1">Theme 4.1</string>
	<string name="theme4_2">Theme 4.2</string>
	<string name="theme4_3">Theme 4.3</string>
	<string name="theme4_4">Theme 4.4</string>
	<string name="securityMsg">Enter Security Code</string>
	<string name="whatsNewTitle">What\'s New</string>
	<string name="newsTitle">News</string>
	<string name="contactUsTitle">Contact Us</string>
	<string name="bugReport">Report A Bug</string>
	<string name="comingSoon">Coming Soon</string>
	<string name="mockSwitch">Mock Access</string>
	<string name="mockInfo">Allows all password attempts to appear as valid but only loads user data upon correct input.</string>
    <string name="privateSwitch">Private Mode</string>
    <string name="privateInfo">When on, disables app from appearing in recent app list.</string>
    <string name="navSwitch">Swipe Nav</string>
    <string name="navInfo">When off, changes navigation style from swipe views to drawer list.</string>
    <string name="themeSwitch">Theme</string>
    <string name="themeInfo">Changes the visual color styling.</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="add">Import</string>
    <string name="rewind">Rewind</string>
    <string name="fastForward">Forward</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="fileName">Filename</string>
    <string name="browserUrlHint">Type URL here</string>
    <string name="signInSwitchText">Sign In</string>
    <string name="signUpSwitchText">Sign Up</string>
    <string name="AccountSetup">Account Setup</string>
    
</resources>
