<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/theme_dark"
    style="@style/layoutStyle">
    
    <LinearLayout style="@style/layoutStyle" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        
        <TextView style="@style/securityTitleStyle" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/securityMsg" android:gravity="center"/>
        <TextView style="@style/securityPasswordStyle" android:background="@drawable/password_bg" android:paddingLeft="40dip" android:paddingRight="40dip" android:layout_marginLeft="20dip" android:layout_marginRight="20dip" android:layout_marginTop="5dip" 
            android:id="@+id/passwordField" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="" android:gravity="center"/>
        
    </LinearLayout>
    
    <LinearLayout style="?android:attr/buttonBarStyle" android:padding="10dip" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num1" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num1"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num2" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num2"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num3" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num3"/>
        
    </LinearLayout>
    
    <LinearLayout style="?android:attr/buttonBarStyle" android:paddingLeft="5dip" android:paddingRight="5dip" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num4" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num4"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num5" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num5"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num6" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num6"/>
        
    </LinearLayout>
    
    <LinearLayout style="?android:attr/buttonBarStyle" android:padding="10dip" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num7" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num7"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num8" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num8"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num9" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num9"/>
        
    </LinearLayout>
    
    <LinearLayout style="?android:attr/buttonBarStyle" android:paddingLeft="5dip" android:paddingRight="5dip" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/clearBtn" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/clear"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/num0" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/num0"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:textColor="@android:color/white" android:background="@drawable/button_gradient" android:id="@+id/backspaceBtn" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="0.33" android:text="@string/backspace"/>
        
    </LinearLayout>

</LinearLayout>