<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addNoteBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/theme_dark">

    <TextView style="@style/securityTitleStyle" android:textColor="#FFFFFF" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/noteDirections" 
        android:layout_marginBottom="3dip" android:layout_marginTop="2dip" android:padding="10dip" android:id="@+id/noteInstructions"/>
    
   <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="15dip" 
       android:layout_margin="3dip" android:background="@drawable/theme_dark">
       
       <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
       android:orientation="vertical">
       
       <TextView style="@style/signupTextView" android:textColor="#FFFFFF" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title" android:layout_marginTop="5dip"/>
       <EditText android:id="@+id/noteTitle" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="35dip" android:hint="@string/blank"
           android:inputType="textCapWords" android:maxLength="16" android:background="@drawable/theme_light"/>
       
       <TextView style="@style/signupTextView" android:textColor="#FFFFFF" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/content" android:layout_marginTop="5dip"/>
       <EditText android:id="@+id/noteContent" android:textColor="#000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxHeight="500dip" android:hint="@string/blank"
           android:inputType="textCapSentences" android:maxLength="500" android:background="@drawable/theme_light" android:minHeight="150dip" android:gravity="start"/>
       
       <Button android:id="@+id/noteSubmitBtn" android:layout_gravity="center" android:layout_margin="10dip" android:background="@drawable/button_click" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/done"/>
       
   	   </LinearLayout>   
   </ScrollView>
</LinearLayout>