<?xml version='1.0' encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/homeFragment">
    
    <LinearLayout style="?android:attr/buttonBarStyle" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        
        <Button style="?android:attr/buttonBarButtonStyle" android:padding="10dip" android:layout_margin="2dip" android:textColor="#3F48FF" android:drawableTop="@drawable/photo_icon" android:layout_width="0dip" android:layout_weight="0.5" android:layout_height="wrap_content" android:id="@+id/photoBtn" android:text="@string/photo"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:padding="10dip" android:layout_margin="2dip" android:textColor="#3F48FF" android:drawableTop="@drawable/video_icon" android:layout_width="0dip" android:layout_weight="0.5" android:layout_height="wrap_content" android:id="@+id/videoBtn" android:text="@string/vids"/>
        
    </LinearLayout>
    
    <LinearLayout style="?android:attr/buttonBarStyle" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        
        <Button style="?android:attr/buttonBarButtonStyle" android:padding="10dip" android:layout_margin="2dip" android:textColor="#3F48FF" android:drawableTop="@drawable/document_icon" android:layout_width="0dip" android:layout_weight="0.5" android:layout_height="wrap_content" android:id="@+id/docsBtn" android:text="@string/docs"/>
        <Button style="?android:attr/buttonBarButtonStyle" android:padding="10dip" android:layout_margin="2dip" android:textColor="#3F48FF" android:drawableTop="@drawable/note_icon" android:layout_width="0dip" android:layout_weight="0.5" android:layout_height="wrap_content" android:id="@+id/noteBtn" android:text="@string/note"/>        
    </LinearLayout>
    
     <LinearLayout style="?android:attr/buttonBarStyle" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        
        <Button style="?android:attr/buttonBarButtonStyle" android:padding="10dip" android:layout_margin="2dip" android:textColor="#3F48FF" android:drawableTop="@drawable/settings" android:layout_width="0dip" android:layout_weight="0.5" android:layout_height="wrap_content" android:id="@+id/settingsBtn" android:text="@string/settings"/>
                
    </LinearLayout>
    
</LinearLayout>
    
  